--- a/color game/colorGame.html
+++ b/color game/colorGame.html
@@ -7,6 +7,9 @@
 <body>
 <h1> The Great <span id='colorDisplay'>RGB </span>Color Game</h1>
 
+<div>
+  <span id='message'></span>
+
 <div id='container'>
   <div class='square'></div>
   <div class='square'></div>
