--- a/color game/colorGame.html
+++ b/color game/colorGame.html
@@ -1,11 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Color Game</title>
-  <link rel="stylesheet" type="text/css" href="colorGame.css">
-</head>
-<body>
-<h1> The Great <span id='colorDisplay'>RGB </span>Color Game</h1>
+    <title>Color Game</title>
+    <link rel="stylesheet" type="text/css" href="colorGame.css">
+  </head>
+  <body>
+  <h1> The Great
+<br>
+ <span id='colorDisplay'>RGB </span>
+<br>
+ Color Game
+ </h1>
 
 <div id="stripe">
   <button id='reset'>New Colors</button>
